login page edit

--- a/Client-UI/angular.json
+++ b/Client-UI/angular.json
@@ -56,7 +56,11 @@
               "node_modules/tinymce/plugins/table/plugin.min.js",
               "node_modules/echarts/dist/echarts.min.js",
               "node_modules/echarts/dist/extension/bmap.min.js",
-              "node_modules/chart.js/dist/Chart.min.js"
+              "node_modules/chart.js/dist/Chart.min.js",
+              "node_modules/jquery/dist/jquery.js",
+              {"input": "src/app/Auth/components/login/assets/js/main.js",
+               "bundleName": "authloginmainjs",
+             "lazy": true}
             ]
           },
           "configurations": {
@@ -119,6 +123,7 @@
               "node_modules/echarts/dist/echarts.min.js",
               "node_modules/echarts/dist/extension/bmap.min.js",
               "node_modules/chart.js/dist/Chart.min.js"
+             
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.css",
